// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get_departments_v1 validates: negative perPage 1`] = `
DirectoryError {
  "code": "invalid_per_page",
  "error": Object {
    "code": "invalid_per_page",
    "message": "Parameter must be in range 1..1000",
    "params": Object {
      "perPage": -1,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;

exports[`get_departments_v1 validates: too big perPage 1`] = `
DirectoryError {
  "code": "invalid_per_page",
  "error": Object {
    "code": "invalid_per_page",
    "message": "Parameter must be in range 1..1000",
    "params": Object {
      "perPage": 100500,
    },
    "type": "INVALID_PARAMS",
  },
  "type": "INVALID_PARAMS",
}
`;
